--- a/app/templates/accounts/register.html
+++ b/app/templates/accounts/register.html
@@ -1,7 +1,17 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+
 {% load static %}
 
-{% block content %}
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Вход</title>
+    <!-- Подключение Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+
+<body>
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6 col-lg-4">
@@ -40,5 +50,9 @@
         </div>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybGJtS3gBXmP1jw6zR6RE3rE6jB9IhpqkYG0X1K+TtKj1v81D" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0pzB7w5upmCPk6o5np0ON9RPp+LsGv2DDQz7t27vbo8p4qbI" crossorigin="anonymous"></script>
 
-{% endblock content %}
+</body>
+</html>
+
