--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,7 @@
     <title>Вход</title>
     <!-- Подключение Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <style>
         header {
@@ -33,7 +34,27 @@
     </style>
 
 </head>
+
 <body class="bg-light">
+
+<header class="bg-light py-3">
+    <div class="container">
+        <div class="d-flex justify-content-between align-items-center">
+            <a href="{% url 'home' %}" class="btn btn-link ms-0">
+                <i class="fas fa-home"></i> Главная
+            </a>
+            <div class="d-flex justify-content-end">
+                {% if request.user.is_authenticated %}
+                    <a href="{% url 'logout' %}" class="btn btn-primary me-2">logout</a>
+                {% else %}
+                    <a href="{% url 'login' %}" class="btn btn-primary me-2">Войти</a>
+                    <a href="{% url 'register' %}" class="btn btn-secondary">Регистрация</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</header>
+
 
     {% block content %}
         <div>Hello world</div>
