--- a/app/templates/cash/index.html
+++ b/app/templates/cash/index.html
@@ -3,19 +3,7 @@
 
 {% block content %}
 
-<!-- Хедер -->
-<header class="bg-light py-3">
-    <div class="container">
-        <div class="d-flex justify-content-end">
-            {% if request.user.is_authenticated %}
-                <a href="{% url 'logout' %}" class="btn btn-primary me-2">logout</a>
-            {% else %}
-                <a href="{% url 'login' %}" class="btn btn-primary me-2">Войти</a>
-                <a href="{% url 'register' %}" class="btn btn-secondary">Регистрация</a>
-            {% endif %}
-        </div>
-    </div>
-</header>
+{% include 'include/_main_nav.html' %}
 
 
 <h1><a href="{% url 'create_subcategory' %}">добавить подкатегорию</a></h1>
