--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,8 +61,8 @@
     {% endblock content %}
 
 <!-- Подключение Bootstrap JS и Popper.js -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybGJtS3gBXmP1jw6zR6RE3rE6jB9IhpqkYG0X1K+TtKj1v81D" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0pzB7w5upmCPk6o5np0ON9RPp+LsGv2DDQz7t27vbo8p4qbI" crossorigin="anonymous"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybGJtS3gBXmP1jw6zR6RE3rE6jB9IhpqkYG0X1K+TtKj1v81D" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0pzB7w5upmCPk6o5np0ON9RPp+LsGv2DDQz7t27vbo8p4qbI" crossorigin="anonymous"></script>-->
 
 </body>
 </html>
