--- a/app/templates/cash/status_add.html
+++ b/app/templates/cash/status_add.html
@@ -10,8 +10,11 @@
 
         <form method="post">
             {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Добавить</button>
+            <div class="form-group">
+        <label for="id_name">Name: </label>
+        <input type="text" name="name" class="form-control" id="id_name">
+    </div>
+            <button type="submit" class="btn btn-primary mt-3">Добавить</button>
         </form>
 
         <a href="{% url 'status_list' %}" class="btn btn-secondary mt-3">Назад</a>
