--- a/app/templates/cash/subcategory_list.html
+++ b/app/templates/cash/subcategory_list.html
@@ -19,7 +19,7 @@
                                 {{ subcategory.name }}
 
                                 <!-- Кнопки редактировать и удалить -->
-                                <div class="btn-group" role="group" aria-label="Actions">
+                                <div class="btn-group ml-auto" role="group" aria-label="Actions" style="float: right;">
                                     <a href="{% url 'subcategory_edit' subcategory.id %}" class="btn btn-primary btn-sm">Редактировать</a>
 
                                     <form action="{% url 'subcategory_delete' subcategory.id %}" method="POST" style="display:inline;"
@@ -38,7 +38,7 @@
                 <li class="list-group-item">Категорий нет</li>
             {% endfor %}
         </ul>
-        <a href="{% url 'create_subcategory' %}" class="btn btn-primary mb-3">Добавить подкатегорию</a>
+        <a href="{% url 'create_subcategory' %}" class="btn btn-primary mb-3 mt-3">Добавить подкатегорию</a>
     </div>
 </div>
 
