--- a/app/templates/cash/type_add.html
+++ b/app/templates/cash/type_add.html
@@ -9,8 +9,11 @@
 
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Сохранить</button>
+    <div class="form-group">
+        <label for="id_name">Name: </label>
+        <input type="text" name="name" class="form-control" id="id_name">
+    </div>
+        <button type="submit" class="btn btn-primary mt-3">Добавить</button>
     </form>
 
     <a href="{% url 'type_list' %}" class="btn btn-secondary mt-3">Отменить</a>
