--- a/app/templates/include/_main_nav.html
+++ b/app/templates/include/_main_nav.html
@@ -1,11 +1,37 @@
 <div class="container-fluid">
     <div class="row">
-        <!-- Левое меню -->
-        <div class="col-md-3 bg-light p-3" style="min-height: 100vh;">
+        <!-- Кнопка для открытия меню на мобильных устройствах -->
+        <button class="btn btn-primary d-md-none mt-2 ms-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMenu">
+            ☰ Меню
+        </button>
+
+        <!-- Offcanvas меню -->
+        <div class="offcanvas offcanvas-start d-md-none" tabindex="-1" id="offcanvasMenu">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title">Меню</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="nav nav-pills flex-column">
+                    <li class="nav-item">
+                        <a href="{% url 'home' %}" class="nav-link {% if request.path == '/home/records/' %}active{% endif %}">Главная</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'record_list' %}" class="nav-link {% if request.path == '/record_list/' or request.path == '/create_record/' or 'record_edit' in request.path %}active{% endif %}">Создание/Редактирование</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'status_list' %}" class="nav-link">Управление справочниками</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Боковое меню (показывается на больших экранах) -->
+        <div class="col-md-3 bg-light p-3 d-none d-md-block" style="min-height: 100vh;">
             <h4>Меню</h4>
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
-                    <a href="{% url 'home' %}" class="nav-link {% if request.path == '/home/' %}active{% endif %}">Главная страница</a>
+                    <a href="{% url 'home' %}" class="nav-link {% if request.path == '/home/records/' %}active{% endif %}">Главная</a>
                 </li>
                 <li>
                     <a href="{% url 'record_list' %}" class="nav-link {% if request.path == '/record_list/' or request.path == '/create_record/' or 'record_edit' in request.path %}active{% endif %}">Создание/Редактирование</a>
@@ -15,3 +41,7 @@
                 </li>
             </ul>
         </div>
+
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
